# FoodFlex

./: README.md
backend/: .gitignore  pyproject.toml
backend/api/: models.py  serializers.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_delete_recipe.py
backend/chatbot/: urls.py  views.py
backend/config/: settings.py  urls.py
backend/items/: models.py  serializers.py  urls.py  views.py
backend/items/migrations/: 0001_initial.py
backend/recipes/: models.py  serializers.py  urls.py  views.py
backend/users/: models.py  serializers.py  urls.py  views.py
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.js  axiosConfig.js
frontend/src/components/: HomePage.js  Items.js  Login.js  MainLayout.js  RecipesList.js  Sidebar.js  Signup.js  chatBot.js  profile.js
frontend/src/styles/: Auth.css  HomePage.css  Items.css  MainLayout.css  Profile.css  RecipesList.css  Sidebar.css  chatBot.css
